# libtrie

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  changelog.txt  setversion.sh
dic/: english.txt  suffix.trie
src/: libtrie.c  libtrie.h  precount.h  single_list.c  single_list.h
tests/: tests.c
utils/: benchmark.h  inline.h  miniunit.h
